Updated the DB to connect to EC2

--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -42,10 +42,10 @@ logging.level.org.springdoc=INFO
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/bedrock_enriched_content_db?tcpKeepAlive=true&connectTimeout=10&socketTimeout=60
+#spring.datasource.url=jdbc:postgresql://localhost:5433/bedrock_enriched_content_db?tcpKeepAlive=true&connectTimeout=10&socketTimeout=60
 
 #private IP
-#spring.datasource.url=jdbc:postgresql://172.31.19.122:5433/bedrock_enriched_content_db
+spring.datasource.url=jdbc:postgresql://172.31.19.122:5433/bedrock_enriched_content_db
 #spring.datasource.url=jdbc:postgresql://54.234.80.209:5433/bedrock_enriched_content_db?tcpKeepAlive=true&connectTimeout=10&socketTimeout=60
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=yugabyte
